--- a/TODO/TODO.txt
+++ b/TODO/TODO.txt
@@ -2,3 +2,4 @@ To do:
 Add the existing BAT files to Deathbat
 Think of ways to impliment the non bat files
 Streamline Deathbat
+Have DEATHBAT request Admin rights in Vista/7
