--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-README WILL GO HERE
-
-Project Deathbat will be a Windows Multitool for finding and fixing various problems that seem to get
-missed by most other tools.
+WARNING: EXPERIMENTAL BRANCH. DO NOT USE.
