Created a C++ experimental branch.
DO NOT USE THIS.

Signed-off-by: Lane Garland <laneg101@gmail.com>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-README WILL GO HERE
+EXPERIMENTAL BRANCH DO NOT USE
 
-Project Deathbat will be a Windows Multitool for finding and fixing various problems that seem to get
-missed by most other tools.
+This will be a variation on Project Deathbat using C++.
+Experienced coders wanted.
