--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 WARNING: EXPERIMENTAL BRANCH. DO NOT USE.
+
+This will be used for implimenting and testing new functions for Deathbat.
+This way I stop breaking the main branch.
