--- a/README
+++ b/README
@@ -2,3 +2,8 @@ README WILL GO HERE
 
 Project Deathbat will be a Windows Multitool for finding and fixing various problems that seem to get
 missed by most other tools.
+
+This is a completely open source project. Feel free to download, add to, copy from, redistribute.
+My only request is to please give project members credit for original work.
+
+Lane Garland (aka need2)
