Bringing up to date with Master.
Signed-off-by: Lane Garland <laneg101@gmail.com>

--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-WARNING: EXPERIMENTAL BRANCH. DO NOT USE.
+README WILL GO HERE
 
-This will be used for implimenting and testing new functions for Deathbat.
-This way I stop breaking the main branch.
+Project Deathbat will be a Windows Multitool for finding and fixing various problems that seem to get
+missed by most other tools.
+
+This is a completely open source project. Feel free to download, add to, copy from, redistribute.
+My only request is to please give project members credit for original work.
+
+Lane Garland (aka need2)
