--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-EXPERIMENTAL BRANCH DO NOT USE
+README WILL GO HERE
 
-This will be a variation on Project Deathbat using C++.
-Experienced coders wanted.
+Project Deathbat will be a Windows Multitool for finding and fixing various problems that seem to get
+missed by most other tools.
+
+This is a completely open source project. Feel free to download, add to, copy from, redistribute.
+My only request is to please give project members credit for original work.
+
+Lane Garland (aka need2)
