Changed 'Deathbat.bat' to charon.bat Changed title and naming of the BAT tool to match new project name Updated naming in the README Updated naming in the TODO
Signed-off-by: Lane Garland <laneg101@gmail.com>

--- a/TODO/TODO.txt
+++ b/TODO/TODO.txt
@@ -1,6 +1,6 @@
 To do:
-Add the existing BAT files to Deathbat
+Add the existing BAT files to Charon.bat
 Think of ways to impliment the non bat files
-Streamline Deathbat
-Have DEATHBAT request Admin rights in Vista/7
+Streamline Charon
+Have Charon request Admin rights in Vista/7
 Investigate other manufacturers' recovery software and find ways to reset their media creation
