--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 README WILL GO HERE
 
-Project Deathbat will be a Windows Multitool for finding and fixing various problems that seem to get
+Project Charon will be a Windows Multitool for finding and fixing various problems that seem to get
 missed by most other tools.
 
 This is a completely open source project. Feel free to download, add to, copy from, redistribute.
