--- a/README
+++ b/README
@@ -1,7 +1,13 @@
-README WILL GO HERE
-
 Project Charon will be a Windows Multitool for finding and fixing various problems that seem to get
 missed by most other tools.
+
+Currently supported tools/fixes:
+~Fixing registry corruption causing Windows to not detect CD/DVD drives.
+~Resetting the HP Recovery Media Creation software to allow more copies to be made.
+~Running the SFC tool for Windows and generating a log in Vista and 7 (used for attempting to find and repair minor OS corruption while booted).
+~Registering or unregistering every .dll in a folder.
+
+Any further suggested tools/fixes are welcomed.
 
 This is a completely open source project. Feel free to download, add to, copy from, redistribute.
 My only request is to please give project members credit for original work.
