TODO And Staging
Added a couple of items to the TODO list. Also, to keep the forward
momentum going, started staging for the next tool: the mass file
unhider.

--- a/TODO/TODO.txt
+++ b/TODO/TODO.txt
@@ -3,3 +3,5 @@ Add the existing BAT files to Charon.bat
 Think of ways to impliment the non bat files
 Streamline Charon
 Investigate other manufacturers' recovery software and find ways to reset their media creation
+Complete support for Windows 8
+GUI - Will require a complete rebase into a different language obviously
