--- a/README
+++ b/README
@@ -9,6 +9,8 @@ Currently supported tools/fixes:
 
 Any further suggested tools/fixes are welcomed.
 
+--->Development of all other tools has been halted for now. C++ rewrite has begun, and a GUI is the next priority.<------
+
 This is a completely open source project. Feel free to download, add to, copy from, redistribute.
 My only request is to please give project members credit for original work.
 
