--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+--->DEVELOPMENT OF THIS BRANCH HALTED<-----------------------------------------------------------------------------------
+
 Project Charon will be a Windows Multitool for finding and fixing various problems that seem to get
 missed by most other tools.
 
